# beachwoodfinancial

./: .dockerignore  .env_dotenv  .flake8  .gitignore  .htmlhintrc  .project  conda.yml  docker-compose.yaml  pyproject.toml
.unotes/: unotes_meta.json
commands/: commands_helpers.py  init_db.py  init_manager_commands.sh
commands/cmd_encrypt/: __init__.py  hasher.py
docker/: .bash_profile  .bashrc
docker/django/: Dockerfile  start
docker/nginx/: Dockerfile  nginx.conf
docker/nodejs/: Dockerfile
nginx/: nginx.conf
requirements/: _all.txt  _base.txt  _code_audit_tools.txt  _dev_ids.txt  commands.txt  dev.txt  documentation.txt  security.txt  stubs-types.txt  test.txt
scripts/: create_stage.py  docker_cleaner.sh  docker_puller.sh
src/: .coveragerc  .dockerignore  coverage_rich.ini  gunicorn.conf.py  init.sh  manage.py  node_installer  pytest.ini  server-entrypoint.sh  uwsgi.ini
src/archive/urls/: __init__.py  client.py  document.py  job.py  note.py  special_assignment.py  task.py
src/archive/views/: client.py  document.py  job.py  note.py  special_assignment.py  task.py
src/assistant/: apps.py
src/assistant/admin/: __init__.py  assistant.py
src/assistant/filters/: __init__.py  assistant.py
src/assistant/forms/: __init__.py  assistant.py
src/assistant/models/: __init__.py  assistant.py  assistant_proxy.py
src/assistant/resources/: assistant.py
src/assistant/serializers/: __init__.py  assistant.py
src/assistant/signals/: assign_manager_permission.py
src/assistant/urls/: __init__.py
src/assistant/views/: __init__.py  assistant.py
src/beach_wood_financial_proj/: asgi.py  urls.py  wsgi.py
src/beach_wood_financial_proj/settings/: __init__.py  base.py  dev.py  local.py  local_dev.py  production.py  stage.py  test.py
src/beach_wood_user/: apps.py
src/beach_wood_user/admin/: __init__.py  bw_user.py  permissions.py  profile.py
src/beach_wood_user/filters/: __init__.py  users_filters.py
src/beach_wood_user/forms/: __init__.py  change_user.py  create_user.py  force_update_password.py  login.py  permissions_form.py  profile.py
src/beach_wood_user/helpers/: permission_helper.py
src/beach_wood_user/models/: __init__.py  beach_wood_user.py  manager.py  profile.py
src/beach_wood_user/resources/: users.py
src/beach_wood_user/serializers/: __init__.py  user.py
src/bookkeeper/: apps.py
src/bw_jinja2/: env.py
src/bw_ui_components/: apps.py
src/cfo/: apps.py
src/client_account/: apps.py
src/client_category/: apps.py
src/components/: IMPORTANT
src/core/: context_processors.py
src/discussion/: apps.py
src/document_template/: apps.py
src/fiscal_year/: apps.py
src/frontend/: .eslintrc  .gitignore  .stylelintrc.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js
src/important_contact/: apps.py
src/job/: apps.py  cron.py
src/job_category/: apps.py
src/job_template/: apps.py
src/note_template/: apps.py
src/site_settings/: apps.py
src/special_assignment/: apps.py  cron.py
src/special_assignment_template/: apps.py
src/staff_briefcase/: apps.py
src/task_item/: apps.py
src/task_template/: apps.py
src/templates/: components.yaml
(+896 files in other folders)
