[tool.black]
line-length = 91
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
py_version=311
profile = "django"
known_django = "django"
line_length = 91
force_single_line = true
known_first_party = "django_components"
#sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
#skip = [".tox", "docs"]

[tool.djlint]
profile="django"
extension="html.dj"
indent=4
exclude=".venv,venv,.tox"
blank_line_after_tag="load,extends,include"
blank_line_before_tag="load,extends,include"
max_line_length=100
format_attribute_template_tags=true
format_js=true
format_css=true

[tool.poetry]
name = "beach wood financial"
version = "0.1"
description = "New major version of bookkeeper checklist web application"
authors = ["Ibrahim Luqman <ibm.jnk@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
pillow = "^9.5.0"
cryptography = "^41.0.1"
django-crispy-forms = "^2.0"
crispy-tailwind = "^0.5.0"
colorama = "^0.4.6"
django-admin-rangefilter = "^0.10.0"
django-filter = "^23.2"
django-maintenance-mode = "^0.18.0"
django-session-timeout = "^0.1.0"
djangorestframework = "^3.14.0"
django-log-viewer = "^1.1.7"
django-import-export = "^3.2.0"
django-extensions = "^3.2.3"
django-components = "^0.28.1"
django-widget-tweaks = "^1.4.12"
hiredis = "^2.2.3"
mysql-connector-python = "^8.0.33"
mysqlclient = "^2.1.1"
psycopg2-binary = "^2.9.6"
python-decouple = "^3.8"
python-webpack-boilerplate = "^1.0.1"
pyminizip = "^0.2.6"
pyyaml = "^6.0"
python-magic = "^0.4.27"
stringcase = "^1.2.0"
redis = "^4.5.5"
requests = "^2.31.0"
whitenoise = "^6.5.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
bandit = "^1.7.5"
black = "^23.3.0"
bpython = "^0.24"
django-debug-toolbar = "^4.1.0"
django-stubs = "^4.2.1"
django-stubs-ext = "^4.2.1"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14.1"}
django-debug-permissions = "^1.0.0"
django-request-viewer = "^1.0.3"
djlint = "^1.31.0"
curlylint = "^0.13.1"
djipsum = "^1.1.5"
docformatter = "^1.7.2"
faker = "^18.10.1"
flake8 = "^6.0.0"
factory-boy = "^3.2.1"
inquirer = "^3.1.3"
isort = "^5.12.0"
mypy = "^1.3.0"
mypy-extensions = "^1.0.0"
pep8 = "^1.7.1"
phone-gen = "^2.3.2"
pip-chill = "^1.0.3"
pipdeptree = "^2.9.3"
prettyprinter = "^0.18.0"
prettytable = "^3.8.0"
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"
pygraphviz = "^1.11"
pyparsing = "^3.0.9"
pydot = "^1.4.2"
docutils = "^0.20.1"
pylama = "^8.4.1"
pylint = "^2.17.4"
pylint-django = "^2.5.3"
pypika = "^0.48.9"
pytest = "^7.3.2"
pytest-django = "^4.5.2"
remote-pdb = "^2.1.0"
rich = "^13.4.2"
selenium = "^4.10.0"
termcolor = "^2.3.0"
yapf = "^0.40.0"
coverage = "^7.2.7"
django-debugtools = "^2.0"
django-model-info = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
